[tool.poetry]
name = "sqlalchemy-paradox"
version ="0.1.2"
description = "SQLAlchemy support for BDE Paradox tables"
authors = ["Mark S. <developers@pawn-pay.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/the-wondersmith/sqlalchemy-paradox"
repository = "https://github.com/the-wondersmith/sqlalchemy-paradox"
keywords = ["SQLAlchemy", "Paradox", "Borland", "Dialect"]
classifiers = [
        "Development Status :: 3 - Alpha",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Topic :: Database :: Front-Ends",
        "Operating System :: OS Independent",
    ]
include = [
    "LICENSE.md",
]

[tool.poetry.dependencies]

python = "^3.7, ^3.8, ^3.9"
sqlalchemy = "^1.3.18"
pyodbc = "^4.0.30"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[tool.poetry.plugins."sqlalchemy.dialects"]
"paradox" = "sqlalchemy_paradox.pyodbc:ParadoxDialect_pyodbc"
"paradox.pyodbc" = "sqlalchemy_paradox.pyodbc:ParadoxDialect_pyodbc"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
